# miniPIC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: minipic.yml
cmake/: link.cmake
doc/: ci.md  clang-format.md  code_structure.md  compilation.md  validation.md
lib/: minipic_ci.py  minipic_diag.py
script/: change_include.py  plot_energy_balance.py  plot_field.py  plot_profiler.py  print_momentum_intime.py  print_particle_intime.py  verif_Bfield_cst.py  verif_EB_cst.py  verif_Efield_cst.py  verif_kinetic_energy.py
scripts/: format.sh  plot_particle_binning.py  plot_particle_cloud.py  print_all_fields.py  print_particles.py
src/: main.cpp
src/common/: Backend.hpp  Params.cpp  Patch.cpp  Random.hpp  Shaman_analysis.hpp  Tools.cpp
src/eventify/: Operators.hpp  SubDomain.hpp
src/openmp/: Operators.hpp  SubDomain.hpp
src/openmp_task/: Operators.hpp
src/setups/: Bcst.hpp  Ecst.hpp  antenna.hpp  beam.hpp  beam_task.hpp  debug.hpp  default.hpp  default_task.hpp  imbalance_task.hpp  study_random.hpp  study_sorted.hpp  study_thermal.hpp  thin_foil.hpp  thin_foil_task.hpp
tests/: README.md  run.py
unit_tests/: CMakeLists.txt
unit_tests/backend_init/: CMakeLists.txt  main.cpp
unit_tests/field_class/: CMakeLists.txt
unit_tests/particles_class/: CMakeLists.txt  main.cpp
unit_tests/vector_class/: CMakeLists.txt  main.cpp
validation/: Bcst.py  Ecst.py  antenna.py  beam.py  default.py
